--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 data-aos-easing="ease-in-back"
                 data-aos-delay="300"
                 data-aos-offset="0" data-aos-duration="1500">
-                    <div class="tag">INTRODUCING &wedbar;</div>
+                    <div class="tag">INTRODUCING </div>
                 </div>
                     <h1 data-aos="fade-zoom-in"
                     data-aos-easing="ease-in-back"
