skills section updated
some new changes

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/5eee46cbb2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -17,13 +18,14 @@
             <h1 data-aos="fade-down" data-aos-duration="1500" >Karan</h1>
             <nav>
                 <a href="index.html#about" data-aos="fade-down" data-aos-duration="1500">About</a>
-                <a href="" data-aos="fade-down" data-aos-duration="2000">Skills</a>
+                <a href="index.html#skills" data-aos="fade-down" data-aos-duration="2000">Skills</a>
                 <a href="" data-aos="fade-down" data-aos-duration="2500">Projects</a> 
             </nav>
             <div class="logo">
                 <a href="" data-aos="fade-down" data-aos-duration="1500"><i class="fa-brands fa-instagram fa-lg"></i></a>
                 <a href="" data-aos="fade-down" data-aos-duration="1500"><i class="fa-brands fa-facebook fa-lg"></i></a>
-                <a href="" data-aos="fade-down" data-aos-duration="1500"><i class="fa-brands fa-github fa-lg"></i></i></a>
+                <a href="https://github.com/Karan28012004" data-aos="fade-down" data-aos-duration="1500"><i class="fa-brands fa-github fa-lg"></i></i></a>
+                <a href="https://www.linkedin.com/in/karan-sharma-290221340/" data-aos="fade-down" data-aos-duration="1500"><i class="fa-brands fa-linkedin fa-lg"></i></a>
             </div>
         </header>
         <main>
@@ -71,24 +73,55 @@
                 <br><br>I’m always eager to explore new technologies, contribute to meaningful projects, and collaborate in team environments where I can learn and grow. Whether it’s designing smooth UI/UX, writing clean backend logic, or optimizing performance, I approach every challenge with curiosity and a desire to create real impact through code.
                 </p>
             </div>
-            <div class="blob-blox">
-                <spline-viewer url="https://prod.spline.design/ZQWU8dyqTTplf4wm/scene.splinecode" class="blob" data-aos="fade-zoom-in"
+            
+                <spline-viewer url="https://prod.spline.design/IN70YJRyGPZLVDE6/scene.splinecode" class="blob" data-aos="fade-zoom-in"
             data-aos-easing="ease-in-back"
             data-aos-delay="300"
             data-aos-offset="0" data-aos-duration="2000"></spline-viewer>
-            </div>
-            
-
+    </section>
+    <!-- Skills Section -->
+     <section class="skills" id="skills">
+        <div class="line" ></div>
+        <h1 data-aos="fade-zoom-in"
+        data-aos-easing="ease-in-back"
+        data-aos-delay="300"
+        data-aos-offset="0" data-aos-duration="300">Skills</h1>
+        <div class="slider" reverse="true" style="
+        --width:100px;
+        --height:100px;
+        --quantity:10;
+        " data-aos="fade-zoom-in"
+            data-aos-easing="ease-in-back"
+            data-aos-delay="300"
+            data-aos-offset="0" data-aos-duration="600">
+        <div class="list">
+            <div class="item" style="--position:1;"><img src="1.png" alt="slider-image"></div>
+            <div class="item" style="--position:2;"><img src="2.png" alt="slider-image"></div>
+            <div class="item" style="--position:3;"><img src="3.png" alt="slider-image"></div>
+            <div class="item" style="--position:4;"><img src="https://cdn-icons-png.flaticon.com/128/753/753244.png" alt="slider-image"></div>
+            <div class="item" style="--position:5;"><img src="https://cdn-icons-png.flaticon.com/128/4248/4248443.png" alt="slider-image"></div>
+            <div class="item" style="--position:6;"><img src="6.png" alt="slider-image"></div>
+            <div class="item" style="--position:7;"><img src="7.png" alt="slider-image"></div>
+            <div class="item" style="--position:8;"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTyiMD8iZTCbrnBlj-Xs5Ffzh2-X90xJi_kgg&s" alt="slider-image"></div>
+            <div class="item" style="--position:9;"><img src="https://cdn-icons-png.flaticon.com/128/919/919825.png" alt="slider-image"></div>
+            <div class="item" style="--position:10;"><img src="https://cdn-icons-png.flaticon.com/128/5968/5968672.png" alt="slider-image"></div>
+        </div>
+        </div>
+        <div class="skill-info-box">
+           <div class="skill-info">
+            <ul>
+                <li>MERN</li>
+                <li>Designing</li>
+                <li>problems</li>
+                <li>jann</li>
+            </ul>
+           </div>
+        </div>
+        <!-- <spline-viewer url="https://prod.spline.design/Nh9ygkc63euhbDEP/scene.splinecode"></spline-viewer> -->
+        <spline-viewer url="https://prod.spline.design/5EGxOW9faUMCLgUG/scene.splinecode" class="cubes"></spline-viewer>
     </section>
 
-    <section class="skills" id="skills">
-        <div class="line"></div>
-    </section>
-
-
 <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.82/build/spline-viewer.js"></script>
-<script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.82/build/spline-viewer.js"></script>
-<!-- <spline-viewer url="https://prod.spline.design/ZQWU8dyqTTplf4wm/scene.splinecode"></spline-viewer> -->
 
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script>
