--- a/index.html
+++ b/index.html
@@ -85,15 +85,18 @@
         <h1 data-aos="fade-zoom-in"
         data-aos-easing="ease-in-back"
         data-aos-delay="300"
-        data-aos-offset="0" data-aos-duration="300">Skills</h1>
+        data-aos-offset="0" data-aos-duration="800">Skills</h1>
+        <div class="skill-info">
+            <p data-aos="fade-zoom-in"
+            data-aos-easing="ease-in-back"
+            data-aos-delay="300"
+            data-aos-offset="0" data-aos-duration="1200">I have a strong command of both frontend and backend development tools, languages, and frameworks. My technical stack includes HTML, CSS, JavaScript, React.js, Next.js, Tailwind CSS for responsive UI development, and Node.js, Express.js, and MongoDB for scalable backend solutions. I’m also experienced with Git, GitHub, RESTful APIs, and developer environments like VS Code, WebStorm, and Google Colab. My familiarity with C, C++, Java, Python, and SQL complements my web development skills with solid programming fundamentals. Whether it’s integrating third-party APIs, optimizing queries, or managing deployment, I enjoy diving deep into tools and workflows that enhance performance, scalability, and collaboration.</p>
+        </div>
         <div class="slider" reverse="true" style="
         --width:100px;
         --height:100px;
         --quantity:10;
-        " data-aos="fade-zoom-in"
-            data-aos-easing="ease-in-back"
-            data-aos-delay="300"
-            data-aos-offset="0" data-aos-duration="600">
+        " >
         <div class="list">
             <div class="item" style="--position:1;"><img src="1.png" alt="slider-image"></div>
             <div class="item" style="--position:2;"><img src="2.png" alt="slider-image"></div>
@@ -107,22 +110,14 @@
             <div class="item" style="--position:10;"><img src="https://cdn-icons-png.flaticon.com/128/5968/5968672.png" alt="slider-image"></div>
         </div>
         </div>
-        <div class="skill-info-box">
-           <div class="skill-info">
-            <ul>
-                <li>MERN</li>
-                <li>Designing</li>
-                <li>problems</li>
-                <li>jann</li>
-            </ul>
-           </div>
-        </div>
-        <!-- <spline-viewer url="https://prod.spline.design/Nh9ygkc63euhbDEP/scene.splinecode"></spline-viewer> -->
-        <spline-viewer url="https://prod.spline.design/5EGxOW9faUMCLgUG/scene.splinecode" class="cubes"></spline-viewer>
+       
+        
+        <spline-viewer url="https://prod.spline.design/xFjCHNLB1gklhAFF/scene.splinecode" class="cubes" data-aos="fade-zoom-in"
+        data-aos-easing="ease-in-back"
+        data-aos-delay="300"
+        data-aos-offset="0" data-aos-duration="2000"></spline-viewer>
     </section>
-
 <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.82/build/spline-viewer.js"></script>
-
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script>
   AOS.init();
