--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav>
                 <a href="index.html#about" data-aos="fade-down" data-aos-duration="1500">About</a>
                 <a href="index.html#skills" data-aos="fade-down" data-aos-duration="2000">Skills</a>
-                <a href="" data-aos="fade-down" data-aos-duration="2500">Projects</a> 
+                <a href="index.html#projects" data-aos="fade-down" data-aos-duration="2500">Projects</a> 
             </nav>
             <div class="logo">
                 <a href="" data-aos="fade-down" data-aos-duration="1500"><i class="fa-brands fa-instagram fa-lg"></i></a>
@@ -116,6 +116,12 @@
         data-aos-easing="ease-in-back"
         data-aos-delay="300"
         data-aos-offset="0" data-aos-duration="2000"></spline-viewer>
+    </section>
+
+    <!-- Projects -->
+    <section class="projects" id="projects">
+        <div class="line" ></div>
+        <h1>Projects</h1>
     </section>
 <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.82/build/spline-viewer.js"></script>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
